# pdf-size-shrinker

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: pdfshrinker.rb
src/: lib.rs  main.rs
